@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST qgit-1.5.7.tar.bz2 206601 RMD160 d9ca8c0ba0aad4f501a561f7f286f53955ceeaa7 SHA1 4ac4ea72b9377f8719c6195a3f07501ad3cfea3a SHA256 5bfc18ade9ebaee216fc59b88fc71dd12f2b973aed2a1ecdf547c8b8cbb91542
 DIST qgit-1.5.8.tar.bz2 209730 RMD160 6564ff1f47457dfb144de062f94037d049b79a77 SHA1 582daa28098801095dfb1bfe9e113f51590690ef SHA256 58df6bf1af447e225473eaf3e3447b97eef63e5bc2ee2b6964aa782b5968af62
 DIST qgit-2.0.tar.bz2 154520 RMD160 5ef74b3bce60466a2ddf62ce0fcd577bcf987500 SHA1 e4b62ece886a49587fe11bf6ea6fb3dcec39cd60 SHA256 aac40c338994a3e7c4004f4d08a1344864072bbaedc59959a05b142bcf3725c6
@@ -5,6 +8,13 @@ DIST qgit-2.1.tar.bz2 177971 RMD160 992f8532dd0b483ef1e230341f76edb5ac5d8465 SHA
 EBUILD qgit-1.5.7.ebuild 628 RMD160 78b2204ec65f8cab1687277adcde8bd6b9deb2bb SHA1 863aa50022b892528d613d64a9b0a7f19c47ed96 SHA256 4ba0fd4b8aa92abaf6a70211e4605edd46c463872b99dee0677f842f03c88b95
 EBUILD qgit-1.5.8.ebuild 631 RMD160 78cd5f63387f8110a91a924d8e08a4965ccf2941 SHA1 f65589ed242a7e0bcfc888c93ee58e2d06c62b18 SHA256 eeb842cb70b8adc10586d9fa897ffd3fa2ca46df9c18fbecfa2d2119bd6f4a84
 EBUILD qgit-2.0-r1.ebuild 819 RMD160 a7ae94c0237aa8d020e496bd2443b87200b32165 SHA1 6bebe4038a4bd440d159cf8acafbcbabf62b8854 SHA256 85240650f9d11dc4c2ba0748c590eb59742db9ef240920adf74feb81e36bd2a1
-EBUILD qgit-2.1.ebuild 946 RMD160 19c7b1b65999653648cb2adf77ee79af1042b5de SHA1 bd7ec7f2bf8ef205fd68d4fe3d3a978a442986f1 SHA256 7753774f47a1d8e5ff3e0dc514f649d0956404f1cfac9ea31f648e8ea2424c8d
-MISC ChangeLog 5208 RMD160 aea1a7a0315da3103ecc6b42347871928f530870 SHA1 d1c043ddd9f11cddcca8b20abe4d3a1b40b91440 SHA256 f97a4ea70c181cf5b65006d724c6cfb74f57af9fac4e9b3ec641a37e7cfaae47
+EBUILD qgit-2.1.ebuild 978 RMD160 b0bae1bd71efc237b8ccea60666f74847a0a2e1d SHA1 995350c71dc3d4f7f77de58327a280f81be809ed SHA256 12d554fb35a07b1beeba861cfb770c7ae29b57bce2cca245e9d903b5a67f10b4
+MISC ChangeLog 5347 RMD160 e4e20b71838a5f0a4d175db020e624f4feed09d9 SHA1 374a53e97513debd117106d0b6e97567125ff158 SHA256 0d96cf031ad92cc2e5efcb1040f7156b2768dd3081284ae7221466c947b1464d
 MISC metadata.xml 355 RMD160 40095a95a3da87fbeb90935a3cb87f127e69da73 SHA1 593165765748f984713db01571743c95aaa52748 SHA256 97365c6b6404edf5aff35ba59dcf22517d9f32704de74a23ed1974f46e61b88a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFH4DN+z974XjDVpbkRAlsvAJ9Dv/MjXZ7Ah8WG82pOZJn1DPaoSgCgpePR
+0gUxW2rzPX+riV9Avi/iO+o=
+=2l+H
+-----END PGP SIGNATURE-----
