@@ -1,6 +1,8 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/qgit-2.1.ebuild,v 1.2 2008/01/13 17:01:17 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/qgit-2.1.ebuild,v 1.3 2008/03/18 21:26:17 jokey Exp $
+
+EAPI="1"
 
 inherit qt4
 
@@ -16,7 +18,7 @@ SLOT="2"
 KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 IUSE=""
 
-DEPEND="$(qt4_min_version 4.3)"
+DEPEND="|| ( x11-libs/qt-gui:4 >=x11-libs/qt-4.3:4 )"
 RDEPEND="${DEPEND}
 	>=dev-util/git-1.5.3"
 
